Made the loading screen elements smaller and removed animation of the loading text. Also fixed grid-behavior, allowing removal of hidden extra image behind the logo

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1472,9 +1472,7 @@
   pointer-events: none;
 }
 
-/* Modify to change color of loading text */
-/* Must also be changed in the circle element in html */
-/* line 7, src/sass/loading.scss */
+/* line 3, src/sass/loading.scss */
 .Loading__wrapper {
   min-height: 100%;
   height: 100%;
@@ -1482,28 +1480,15 @@
   position: absolute;
   display: grid;
   justify-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   grid-template-columns: 100%;
-  grid-template-rows: 1fr 50% 10% 1fr;
+  grid-template-rows: 1fr 25% 10% 1fr;
   background-color: rgba(18, 18, 18, 0.9);
   z-index: 100;
+  /* The animated Viral50 logo */
+  /* 'LOADING' text */
 }
 
-/* line 27, src/sass/loading.scss */
-.Loading__wrapper #pseudo-logo {
-  align-self: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  grid-area: 2 / 1 / 3;
-  height: 100%;
-  opacity: 0;
-}
-
-/* line 32, src/sass/loading.scss */
+/* line 16, src/sass/loading.scss */
 .Loading__wrapper #logo {
   align-self: center;
   display: -webkit-box;
@@ -1511,71 +1496,24 @@
   display: flex;
   grid-area: 2 / 1 / 3;
   height: 100%;
-  /*margin: 0 auto 0;*/
   opacity: 1.0;
   -webkit-animation: logoPulse 0.7s infinite ease-in-out alternate;
           animation: logoPulse 0.7s infinite ease-in-out alternate;
 }
 
-/* line 38, src/sass/loading.scss */
-.Loading__wrapper svg {
-  height: 100%;
+/* line 25, src/sass/loading.scss */
+.Loading__wrapper h2 {
   z-index: 101;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  align-self: center;
+  align-self: flex-start;
   grid-area: 3 / 1 / 5;
   overflow: visible;
-}
-
-/* line 46, src/sass/loading.scss */
-.Loading__wrapper svg .circle {
-  stroke-dasharray: 150;
-  -webkit-animation: draw 2s linear infinite;
-          animation: draw 2s linear infinite;
-}
-
-/* line 51, src/sass/loading.scss */
-.Loading__wrapper svg .one, .Loading__wrapper svg .two, .Loading__wrapper svg .three, .Loading__wrapper svg .four, .Loading__wrapper svg .five, .Loading__wrapper svg .six {
-  -webkit-animation: letterflash 2s ease-in-out infinite;
-          animation: letterflash 2s ease-in-out infinite;
-}
-
-/* line 55, src/sass/loading.scss */
-.Loading__wrapper svg .six {
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s;
-}
-
-/* line 56, src/sass/loading.scss */
-.Loading__wrapper svg .five {
-  -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
-}
-
-/* line 57, src/sass/loading.scss */
-.Loading__wrapper svg .four {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-}
-
-/* line 58, src/sass/loading.scss */
-.Loading__wrapper svg .three {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
-}
-
-/* line 59, src/sass/loading.scss */
-.Loading__wrapper svg .two {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
-}
-
-/* line 60, src/sass/loading.scss */
-.Loading__wrapper svg .one {
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
+  font-weight: bolder;
+  color: #18aa4c;
+  -webkit-transform: translate(-5%, 0);
+          transform: translate(-5%, 0);
 }
 
 /* Animation of drawing the line path of the chart/graph */
@@ -1597,60 +1535,6 @@
   to {
     opacity: 0.8;
     height: 90%;
-  }
-}
-
-@-webkit-keyframes draw {
-  0% {
-    stroke: #1ed760;
-  }
-  100% {
-    stroke-dashoffset: 300;
-  }
-}
-
-@keyframes draw {
-  0% {
-    stroke: #1ed760;
-  }
-  100% {
-    stroke-dashoffset: 300;
-  }
-}
-
-@-webkit-keyframes letterflash {
-  0% {
-    fill: #1ed760;
-  }
-  100% {
-    fill: #127d38;
-  }
-}
-
-@keyframes letterflash {
-  0% {
-    fill: #1ed760;
-  }
-  100% {
-    fill: #127d38;
-  }
-}
-
-@-webkit-keyframes spinnerflash {
-  0% {
-    stroke: #1ed760;
-  }
-  100% {
-    fill: #127d38;
-  }
-}
-
-@keyframes spinnerflash {
-  0% {
-    stroke: #1ed760;
-  }
-  100% {
-    fill: #127d38;
   }
 }
 
