--- a/src/sass/loading.scss
+++ b/src/sass/loading.scss
@@ -1,8 +1,4 @@
 @import "variables.scss";
-/* Modify to change color of loading text */
-/* Must also be changed in the circle element in html */
-$loading_color1: $spotify_green_color;
-$loading_color2: darken($spotify_green_color, 20);
 
 .Loading__wrapper {
   min-height: 100%;
@@ -11,54 +7,30 @@ $loading_color2: darken($spotify_green_color, 20);
   position: absolute;
   display: grid;
   justify-items: center;
-  flex-direction: row;
   grid-template-columns: 100%;
-  grid-template-rows: 1fr 50% 10% 1fr;
+  grid-template-rows: 1fr 25% 10% 1fr;
   background-color: rgba($Root__wrapper_background, 0.9);
   z-index: 100;
 
-  @mixin logo {
+  /* The animated Viral50 logo */
+  #logo {
     align-self: center;
     display: flex;
     grid-area: 2 / 1 / 3;
     height: 100%;
-  }
-  
-  #pseudo-logo{
-    @include logo;
-    opacity: 0;
-  }
-
-  #logo {
-    @include logo;
-    /*margin: 0 auto 0;*/
     opacity: 1.0;
     animation: logoPulse 0.7s infinite ease-in-out alternate;
   }
-  svg { 
-    height: 100%;
+  /* 'LOADING' text */
+  h2 { 
     z-index: 101;
     display: flex;
-    align-self: center;
+    align-self: flex-start;
     grid-area: 3 / 1 / 5;
-    overflow: visible; 
-
-    .circle {
-      stroke-dasharray: 150;
-      animation: draw 2s linear infinite;
-    }
-    
-    .one, .two, .three, .four, .five, .six {
-      animation: letterflash 2s ease-in-out infinite;
-    }
-    
-    .six   { animation-delay: 0.5s; }
-    .five  { animation-delay: 0.4s; }
-    .four  { animation-delay: 0.3s; }
-    .three { animation-delay: 0.2s; }
-    .two   { animation-delay: 0.1s; }
-    .one   { animation-delay: 0s; }
-       
+    overflow: visible;
+    font-weight: bolder;
+    color: darken($spotify_green_color, 10);
+    transform: translate(-5%, 0);
   }
 }
 
@@ -72,19 +44,4 @@ $loading_color2: darken($spotify_green_color, 20);
     opacity: 0.8;
     height: 90%;
   }
-}
-
-@keyframes draw {
-  0% { stroke: $loading_color1; }
-  100% { stroke-dashoffset: 300; }
-}
-
-@keyframes letterflash {
-  0% { fill: $loading_color1; }
-  100% { fill: $loading_color2; }
-}
-
-@keyframes spinnerflash {
-  0% { stroke: $loading_color1; }
-  100% { fill: $loading_color2; }
 }
